--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# .env para desenvolvimento
-REACT_APP_API_URL=http://localhost:5000
+DATABASE_URL=mongodb+srv://adrianoocf:A004198461a@clustertask.hbwte.mongodb.net/?retryWrites=true&w=majority&appName=ClusterTask
