--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "20.15.1"
   },
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
